force-app/main/default/objects/Stock_Check__c/Stock_Check__c.object-meta.xml
<CustomObject>
    <description>In-visit retailer stock check header (BRD 18/21.15). Captured under a Visit; lines hold available qty per SKU.</description>
    <label>Stock Check</label>
    <nameField>
        <displayFormat>SC-{000000}</displayFormat>
        <label>Stock Check ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stock Checks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>