force-app/main/default/objects/Stock_Check__c/fields/Check_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Check_Date_Time__c</fullName>
    <label>Check Date/Time</label>
    <type>DateTime</type>
</CustomField>