force-app/main/default/objects/Stock_Check__c/fields/Outlet__c.field-meta.xml
<CustomField>
    <fullName>Outlet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Outlet</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Stock_Checks</relationshipName>
    <type>Lookup</type>
</CustomField>